--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
     <string name="placeholder_instagram_page">Instagram page</string>
     <string name="placeholder_bio">Bio</string>
     <string name="placeholder_email">Email</string>
+    <string name="placeholderlocaation">Location</string>
     <string name="placeholder_subject">Subject</string>
     <string name="placeholder_support_detail">What are you contacting us about?</string>
     <string name="placeholder_current_password">Current password</string>
@@ -327,5 +328,11 @@
 
     <string name="label_just_now">Just now</string>
     <string name="channel_name">QAChat</string>
+
+    <string name="ok">OK</string>
+    <string name="Gender">Gender</string>
+    <string name="Distance">Distance</string>
+    <string name="Age">Age</string>
+    <string name="pleaseChooseFilterType">Please Choose Filter Type</string>
 
 </resources>
